// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsActivity component should render daily room events 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={[MockFunction]}
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="55dc3b36-7362-4d03-a3fd-a29c6fe66609"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="334ea3f5-d77a-40a1-b1eb-cfbdab3d860a"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6dbbf0e5-35fc-4197-84b1-ce1f5b953e55"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ce3d99de-c0e1-40f9-a1db-a16f1ebb7c65"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="106ce9cf-3198-4d58-8678-45b4240fcafe"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d73f9614-801c-4073-842f-eb84cce3777e"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="46247802-fe91-4f6c-b746-8aa66ae76793"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6fd81250-0f40-4fc7-a02a-924704f2e6f0"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9f473b1c-7903-4c78-8774-8a6124292062"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b3b34b0e-c871-4319-83ac-e8ca63be7b06"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="bea496c1-9d96-48a2-bad9-1de207668fd0"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="838fcb7b-9080-4aed-854c-e840c3dbb01c"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6ceceadd-e3a9-4a8b-9480-932a9a750923"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="7c6fdd46-02f8-4d78-a6d2-a885863e8e32"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="7be8cd7c-b2c4-4fd0-8983-e97dda3674a8"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e8433b6f-aa97-4edb-88b5-c7f390f7f824"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6a28504b-9237-409e-a995-b90dd173cf50"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e07bb973-998f-43c0-9434-9e9f7a417705"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="953a9f1e-2510-48a1-b1f8-0d0ed0dc4e7b"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="1baa8860-c026-4659-bd10-bbbef6c92cbe"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="efc2c0da-0165-4594-88df-4f602047ebd7"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="a7478819-2d54-4e7c-981a-549b498a2b49"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6f0b1b69-5d9c-41a4-bdc8-3afca2ab154a"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="01d33403-2742-43c6-a3a6-bb2c36eb3519"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="a74f14f6-9dff-42a1-8b10-b25ca09ff6e5"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;

exports[`AnalyticsActivity component should render resource not founr 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={
    [MockFunction] {
      "calls": Array [
        Array [
          "analyticsForDailyRoomEvents",
        ],
      ],
    }
  }
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="beac5dae-aeb8-4bb7-a1dd-5b9562c05daf"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="5bbdfbe1-9279-418a-a0d3-804d749f129b"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="eeac88b9-908b-400a-98a2-5e93dba9bba1"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b04793a5-ac33-4c75-a6da-149e80f5b307"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="c152ec73-9d45-4688-8a6c-ab503b0b8c65"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="67cbc902-68ad-4931-8997-0ae002a4c2c1"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="97566368-4765-4622-82ba-79194b93608b"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="662d8a13-5133-4624-a95f-1b15c6bd7564"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="93ff7bf6-c923-4767-b388-34f82c6f3da8"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9c4fd301-8529-49c2-9299-ed1922c1d5df"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="139da39c-880e-4ca4-8063-71f232429019"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="34ab63b1-74e1-4eb5-aa3d-700580460a67"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9ee5db29-7ed0-4969-8999-64d56bc1e3a0"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="5ac59d8e-67ea-4872-9aed-ac1628b3a3ca"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="fb9ceac7-904d-44e6-9519-09038169db0d"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f4ffec2c-0215-42db-969b-75fe8f30c308"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="87f746e8-a465-4cbc-ae11-16d7284b7575"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="7d6edece-66be-4edb-a912-a7a2d825e7bb"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="608d12a9-d6c1-4606-936d-06fadd7f5396"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="29633bea-6af6-4f77-9cd9-08d46ecfda27"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="1e409cf3-fe0a-43ea-9282-64662eee76cf"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="176fbec4-0184-4902-b21f-2a10159dc360"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="166f9473-c9d5-4215-920a-6bc95a889a40"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6acf177c-d428-4acd-a5ca-cbbc654807f7"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e0a62403-7006-4a07-a3a5-5a37c0749107"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;
